<resources>
    <string name="app_name">Sentinel Prime</string>
    <string name="screen1">loading screen</string>
    <string name="screen2">register</string>
    <string name="screen3">login</string>
    <string name="screen4">setting</string>
    <string name="screen5">profile</string>
    <string name="screen6">Edit profile</string>
    <string name="screen7">language</string>
    <string name="screen8">change Password</string>
    <string name="screen9">dashboard</string>
    <string name="txtSignUp">Registrarse</string>
    <string name="txtName">Nombre Completo</string>
    <string name="txtPhoneNumber">Numero de teléfono</string>
    <string name="txtEmail">Correo Electrónico</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtUser">David Membreño</string>
    <string name="txtPhoneNum">+505 00000000</string>
    <string name="txtEmailSignUp">test@gmail.com</string>
    <string name="txtPass">........</string>
    <string name="btnSignUp">Registrarse</string>
    <string name="loginImgbutton">TODO</string>
    <string name="txtlogin">Iniciar Sesión</string>
    <string name="hint_test_gmail_com">test@gmail.com</string>
    <string name="txtcontrase_a">Contraseña</string>
    <string name="hintpassword">......</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="txtsignup">Registrarse</string>
    <string name="profileImg">Profile img</string>
    <string name="welcomeHome">Bienvenido</string>
    <string name="nameUserHome">David Membreño</string>
    <string name="searchIconHome">Search icon</string>
    <string name="headResumeLabel">Resumen</string>
    <string name="filterLabel">Mostrar: Este Año</string>
    <string name="descriptionImg">TODO</string>
    <string name="showOtherClient">Ver Todos los Clientes</string>
    <string name="onWayLabel">En Ruta</string>
    <string name="onWayCount">246</string>
    <string name="comparisonOnWay">Comparado con \n(267 el mes pasado)</string>
    <string name="percentOnWay">-16%</string>
    <string name="backorderHead">Pendiente</string>
    <string name="countBackorder">254</string>
    <string name="comparisonBackorder">Comparado con \n(230 el mes pasado)</string>
    <string name="percentBackorder">+10%</string>
    <string name="cancelHead">Cancelado</string>
    <string name="countCancel">252</string>
    <string name="comparisonCancel">Comparado con \n300 el mes pasado)</string>
    <string name="percentCancel">-16%</string>
    <string name="deliveredHead">Entregado</string>
    <string name="countDelivered">248</string>
    <string name="comparisonDelivered">Comparado con \n(236 el mes pasado)</string>
    <string name="percentDelivered">+5%</string>
    <string name="listClientHead">Nuevos Clientes</string>
    <string name="firstClientLabel">Francis Holzworth</string>
    <string name="firstIdClient">Cliente ID#00222</string>
    <string name="secondClientLabel">Kaylyn Yokel</string>
    <string name="secIdClient">Cliente ID#00222</string>
    <string name="sentinelprime">sentinelPrime</string>
    <string name="txtsentinelprime">txtsentinelPrime</string>
    <string name="sentinel">Sentinel</string>
    <string name="prime">Prime</string>
    <string name="txt_sentinel">Sentinel</string>
    <string name="txt_prime">Prime</string>
    <string name="terms">
    Bienvenido a la aplicación móvil de TecnoNic. Estos términos rigen el uso de todos los productos y servicios ofrecidos por TecnoNic.&#10;&#10;

    Al utilizar la aplicación de TecnoNic, aceptas los siguientes términos:&#10;&#10;

    <b>Uso de Servicios:</b>&#10;&#10;
    Al usar nuestros productos, te comprometes a hacerlo de manera legal y a proporcionar información precisa.&#10;&#10;

    <b>Propiedad Intelectual:</b>&#10;&#10;
    Todo el contenido de esta aplicación es propiedad de TecnoNic. No se permite su uso sin autorización.&#10;&#10;

    <b>Privacidad:</b>&#10;&#10;
    Nos comprometemos a proteger tu información. Consulta nuestra Política de Privacidad para más detalles.&#10;&#10;

    <b>Compras:</b>&#10;&#10;
    Los precios y ofertas pueden cambiar sin previo aviso. Las compras están sujetas a nuestras políticas de devoluciones.&#10;&#10;

    <b>Responsabilidad:</b>&#10;&#10;
    TecnoNic no se hace responsable por el mal uso de los productos o servicios.&#10;&#10;

    <b>Modificaciones:</b>&#10;&#10;
    Nos reservamos el derecho de modificar estos términos en cualquier momento.
</string>

    <string name="headLogin">Inicia Sesión</string>
    <string name="hintPass">********</string>
    <string name="textSingIn">Soy un usuario nuevo.</string>
    <string name="textLinkSignIn">Registrarse</string>
    <string name="textSingUp">Ya tengo una cuenta.</string>
    <string name="linkTextSingUp">Iniciar sesión</string>
    <string name="changePassCurrent">Contraseña Actual</string>
    <string name="changePass">Cambio de Contraseña</string>
    <string name="changePassNew">Nueva Contraseña</string>
    <string name="changePassConfirm">Confirmar Nueva Contraseña</string>
    <string name="changePassTitleDown">Ambas contraseñas deben coincidir</string>
    <string name="changePassBtn">Cambiar Contraseña</string>
    <string name="editProfile">Editar Perfil</string>
    <string name="editProfileUser">Testing User</string>
    <string name="editProfileName">Nombre Completo</string>
    <string name="editProfileCreateDate">Se unió 21 Enero 2024</string>
    <string name="languageHead">Lenguaje</string>
    <string name="languageIngles">Inglés</string>
    <string name="languageFrances">Francés</string>
    <string name="languageAustralia">Australia</string>
    <string name="languageVietman">Vietman</string>
    <string name="headProfile">Perfil</string>
    <string name="infoPersonalProfile">Información Personal</string>
    <string name="settingProfile">Ajuste</string>
    <string name="termHead">Términos y Condiciones</string>
    <string name="settingHead2">General</string>
    <string name="headLenguage">Lenguaje</string>
    <string name="lenguageHardcodeado">Español</string>
    <string name="headProfileSetting">Mi perfil</string>
    <string name="contacHead">Contactenos</string>
    <string name="headSecurity">Seguridad</string>
    <string name="termsSetting">Politicas de privacidad</string>
    <string name="headFirstStatistics">Clientes con mas pedidos</string>
    <string name="headSecondStat">Vista de Pedidos</string>
    <string name="headThirdStatic">Gastado</string>
    <string name="headFourStac">Data</string>
    <string name="headProfits">Ganacias</string>
    <string name="countProfit">50000.0</string>
    <string name="product1">Laptop</string>
    <string name="address1">Managua</string>
    <string name="region1">Productos por región</string>
    <string name="countSpent">30000.0</string>
    <string name="product2">Cellphone</string>
    <string name="address2">Masaya</string>
    <string name="priceProduc">20000.0</string>
    <string name="product3">Airdrop</string>
    <string name="address3">Granada</string>
</resources>