<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <ImageButton
            android:id="@+id/imageBtnBackSignUp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/path"
            android:background="@drawable/circlebutton_signup"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="193dp"
            android:layout_height="40dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="30dp"
            android:text="@string/txtSignUp"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFullName"
            android:layout_width="136dp"
            android:layout_height="16dp"
            android:text="@string/txtName"
            android:layout_marginTop="35sp"
            android:layout_marginStart="54dp"
            android:textSize="14sp"
            android:textColor="@color/gray_500"/>

        <EditText
            android:id="@+id/editTxtFullName"
            android:layout_width="335dp"
            android:layout_height="32dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="10sp"
            android:autofillHints=""
            android:background="@drawable/edit_textline_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtUser"
            android:inputType="text"
            android:paddingTop="12dp"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="136dp"
            android:layout_height="16dp"
            android:text="@string/txtPhoneNumber"
            android:layout_marginTop="35sp"
            android:layout_marginStart="54dp"
            android:textSize="14sp"
            android:textColor="@color/gray_500"/>

        <EditText
            android:id="@+id/editTxtPhone"
            android:layout_width="335dp"
            android:layout_height="32dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="10sp"
            android:autofillHints=""
            android:background="@drawable/edit_textline_email"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtPhoneNum"
            android:inputType="phone"
            android:paddingTop="12dp"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="136dp"
            android:layout_height="16dp"
            android:text="@string/txtEmail"
            android:layout_marginTop="35sp"
            android:layout_marginStart="54dp"
            android:textSize="14sp"
            android:textColor="@color/gray_500"/>

        <EditText
            android:id="@+id/editTxtEmail"
            android:layout_width="335dp"
            android:layout_height="32dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="10sp"
            android:autofillHints=""
            android:background="@drawable/edit_textline_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtEmailSignUp"
            android:inputType="textEmailAddress"
            android:paddingTop="12dp"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="136dp"
            android:layout_height="16dp"
            android:text="@string/txtPassword"
            android:layout_marginTop="35sp"
            android:layout_marginStart="54dp"
            android:textSize="14sp"
            android:textColor="@color/gray_500"/>

        <EditText
            android:id="@+id/editTxtPassword"
            android:layout_width="335dp"
            android:layout_height="32dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_textline_email"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_eye"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/txtPass"
            android:inputType="textPassword"
            android:paddingTop="1dp"
            android:textColorHint="@color/black"
            android:textSize="45sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="335dp"
            android:layout_height="56dp"
            android:text="@string/btnSignUp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"/>

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="236dp"
            android:layout_height="16dp"
            android:text="@string/registerLogin"
            android:textColor="@color/blue_500"
            android:layout_marginStart="165dp"
            android:layout_marginTop="15dp"/>

        //>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>