<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="410dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="410dp"
        android:layout_height="match_parent"
        android:paddingStart="40dp"
        android:layout_marginTop="50dp"
        android:paddingEnd="40dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/settingProfile"
                android:textSize="25sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <!-- Sección "General" -->
        <TextView
            android:id="@+id/tv_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:paddingBottom="8dp"
            android:text="@string/settingHead2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <!-- Opción lenguaje -->
        <LinearLayout
            android:id="@+id/linearLayoutLenguaje"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_general">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_general"
                tools:ignore="ExtraText,TouchTargetSizeCheck">

                <TextView
                    android:id="@+id/textLanguaje"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:text="@string/headLenguage"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textLanguaje2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/lenguageHardcodeado"
                    android:textColor="#546E7A"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/btnLangueje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_arrowbtn"
                    android:contentDescription="@string/descriptionImg"
                    tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/gray_500" />


        </LinearLayout>

        <!-- Opción profile -->
        <LinearLayout
            android:id="@+id/linearLayoutProfile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutLenguaje">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_general"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck">

                <TextView
                    android:id="@+id/textProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headProfileSetting"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/btnProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_arrowbtn"
                    android:contentDescription="@string/descriptionImg"
                    tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/gray_500" />


        </LinearLayout>


        <!-- Opción profile -->
        <LinearLayout
            android:id="@+id/linearLayoutContact"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutProfile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_general"
                tools:ignore="TouchTargetSizeCheck">

                <TextView
                    android:id="@+id/textContact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contacHead"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/btnContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_arrowbtn"
                    android:contentDescription="@string/descriptionImg"
                    tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/gray_500" />


        </LinearLayout>
        <!-- Sección "General" -->
        <TextView
            android:id="@+id/textSecurity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingBottom="8dp"
            android:text="@string/headSecurity"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutContact" />


        <LinearLayout
            android:id="@+id/linearLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSecurity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="TouchTargetSizeCheck,UseCompoundDrawables">

                <TextView
                    android:id="@+id/textPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/changePass"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/btnPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"

                    android:background="@drawable/ic_arrowbtn"
                    android:contentDescription="@string/descriptionImg"
                    tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/gray_500" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutTerms"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="TouchTargetSizeCheck,UseCompoundDrawables">

                <TextView
                    android:id="@+id/textTerms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/termsSetting"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/btnTerms"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_arrowbtn"
                    android:contentDescription="@string/descriptionImg"
                    tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/gray_500" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>